        Reviewed by mjs.

Fix createElementNS to throw exceptions for invalid qualified names
        Fixes Acid3 sub-test 23
        http://bugs.webkit.org/show_bug.cgi?id=16833

        Tests: fast/dom/Document/createAttributeNS-namespace-err.html
               fast/dom/Document/createElementNS-namespace-err.html

        * dom/Document.cpp:
        (WebCore::Document::createElement):
        (WebCore::hasNamespaceError):
        (WebCore::Document::createElementNS):
        (WebCore::Document::createAttributeNS):
        * dom/Document.idl:


Canonical link: https://commits.webkit.org/24909@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31230 268f45cc-cd09-0410-ab3c-d52691b4dbfc